--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,11 @@
     "parserOptions": {
         "sourceType": "module"
     },
+    "globals": {
+        "module": false,
+        "require": false,
+        "__dirname": false
+    },
     "rules": {
         "accessor-pairs": "error",
         "array-bracket-newline": "off",
