--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,10 @@
         "require": false
     },
     "rules": {
+        "react/require-extension": "off",
+        "react/jsx-sort-prop-types": "off",
+        "react/wrap-multilines": "off",
+        
         "accessor-pairs": "error",
         "array-bracket-newline": "off",
         "array-bracket-spacing": "off",
