--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/socket.io": "^1.4.31",
     "core-js": "^2.4.1",
     "eslint-config-defaults": "^9.0.0",
     "rxjs": "^5.4.2",
+    "socket.io": "^2.0.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
